added settings logics on login activity, fixed logout method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="yes">YES</string>
     <string name="cancel">CANCEL</string>
     <string name="open_settings">Open Settings</string>
+    <string name="sign_up">Don\'t have an account? Create one</string>
+
 </resources>
